Changes since last push:
 - Fixed the bug that made map rendering vanish when the player went too high
 - Changed potion stack size to 30

Known "features":
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - If carried by a boulder with another boulder right behind you, the top
boulder updates first and traps you.
 - Dirt and mud look very similar, and mud looks identical to humus

Known bugs:
 - Collision detection misses one when falling into a two-wide gap at just the
right angle
 - When the window is bigger than the map, crossing x = 0 causes an assertion
error.
 - The player can't jump when colliding with a wall.
 - When colliding with the bottom of the map, position is set but velocity isn't

To do:
 - throwing items, attracting items
 - add menu
 - multithreading so the window remains responsive while generating a map
 - save and load the player
 - Make all public Map functions accept any x value (might be done?)
 - remove Map.getForeground() and Map.getBackground()
 - Make spawning destroy solid tiles at the spawn
 - make it impossible to place solid blocks on top of creatures
 - make light work properly with background walls and water
 - add light sources other than the sky
 - make collisions with semi-solid blocks slow the player down
 - Trees!
 - add actual liquids?
 - make sprites for all tile types
 - Refactor sprites so they load in their constructor (make path a global 
variable?)

