@@ -1,0 +1,52 @@
+#ifndef MENU_HH
+#define MENU_HH
+
+enum class Screen {
+    START
+};
+
+class Menu {
+    Screen screen;
+
+    void render();
+};
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#endif
