@@ -1,5 +1,5 @@
-#ifndef UIHELPERS_HH
-#define UIHELPERS_HH
+#ifndef STATBAR_HH
+#define STATBAR_HH
 
 #include <iostream>
 #include <SDL2/SDL.h>
@@ -7,35 +7,7 @@
 #include "Stat.hh"
 #include "Sprite.hh"
 
-/* A struct with a rectangle and bools. The rectangle is in screen
-coordinates, and the bools are for whether the mouse is in the box and 
-whether it's been clicked. */
-struct MouseBox {
-    // x and y values of the top left corner of the rectangle
-    int x;
-    int y;
-    // Width and height of the rectangle
-    int w;
-    int h;
-    // Self-explanatory
-    bool containsMouse;
-    // Whether we should pay any attention to the event this contains
-    bool wasClicked;
-    // Whether it was also clicked last time (presumably the mouse button is 
-    // being held down)
-    bool isHeld;
-    // The event that happened in this box and needs to be handled
-    SDL_MouseButtonEvent event;
 
-    // Return true if the coordinates are inside the rectangle, and also
-    // sets containsMouse to the return value
-    bool contains(int xMouse, int yMouse) {
-        bool answer = (x <= xMouse) && (xMouse < x + w);
-        answer = answer && (y <= yMouse) && (yMouse < y + h);
-        containsMouse = answer;
-        return answer;
-    }
-};
 
 /* A struct for drawing a bar, such as a health bar. The bool is for whether 
 it's vertical or horizontal, although you can usually also tell that from 
