@@ -9,11 +9,8 @@
 #include "Light.hh"
 #include "Tile.hh"
 #include "Map.hh"
-#include "Hotbar.hh"
 #include "Player.hh"
-#include "UIHelpers.hh"
 #include "Sprite.hh"
-#include "Inventory.hh"
 #include "Action.hh"
 #include "Rect.hh"
 #include "World.hh"
