@@ -4,6 +4,6 @@
 /* Keep track of the version. */
 #define MAJOR 0
 #define MINOR 8
-#define PATCH 4
+#define PATCH 5
 
 #endif
